--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,16 @@ group = project.maven_group
 
 repositories {
     mavenLocal()
+    maven { url = "https://maven.is-immensely.gay/releases" } // Spectrum, AEA
     maven { url = "https://maven.shedaniel.me/" } // Cloth Config, REI
     maven { url = "https://maven.terraformersmc.com/" } // Modmenu, EMI
-    maven { url = "https://maven.blamejared.com" } // Patchouli
     maven { url = "https://api.modrinth.com/maven" } // Revelationary, Fractal
-    maven { url = "https://jitpack.io" } // Arrowhead, Dimensional Reverb, Step Height Entity Attribute
+    maven { url = "https://maven.nucleoid.xyz/" } // Common Protection API
     maven { url = "https://maven.ladysnake.org/releases" } // Cardinal Components API
     maven { url = "https://maven.jamieswhiteshirt.com/libs-release/" } // Entity Reach Attribute
+    maven { url = "https://dl.cloudsmith.io/public/klikli-dev/mods/maven/" } // Modonomicon
+    maven { url = "https://maven.blamejared.com" } // JEI
+    maven { url = "https://jitpack.io" } // Arrowhead, Dimensional Reverb, Step Height Entity Attribute
 }
 
 dependencies {
@@ -23,22 +26,21 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation("maven.modrinth:Spectrum:${project.spectrum_version}") {
+    modImplementation("de.dafuqs:spectrum:${project.spectrum_version}") {
         exclude(group: "com.unascribed:ears-api")
         exclude(group: "maven.modrinth:colorful-hearts")
     }
 
-    implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${project.mixin_extras_version}"))
-
+    modImplementation("maven.modrinth:exclusions-lib:${project.exclusionslib_version}")
     modImplementation("maven.modrinth:Revelationary:${project.revelationary_version}")
-    modImplementation("maven.modrinth:fractal-lib:${project.fractal_version}")
+    modImplementation include("maven.modrinth:AdditionalEntityAttributes:${project.additional_entity_attributes_version}")
+    modImplementation include("com.github.DaFuqs:Arrowhead:${project.arrowhead_version}")
+    modImplementation include("com.github.DaFuqs:DimensionalReverb:${project.dimensional_reverb_version}")
+    modImplementation include("maven.modrinth:fractal-lib:${project.fractal_version}")
+    modImplementation include("de.dafuqs:Matchbooks:${project.matchbooks_version}")
 
-    modImplementation("maven.modrinth:AdditionalEntityAttributes:${project.additional_entity_attributes_version}")
-    modImplementation("com.github.DaFuqs:Arrowhead:${project.arrowhead_version}")
-    modImplementation("com.github.DaFuqs:DimensionalReverb:${project.dimensional_reverb_version}")
+    modImplementation("com.klikli_dev:modonomicon-${project.minecraft_version}-fabric:${project.modonomicon_version}") { exclude(group: "com.klikli_dev") }
     modImplementation("dev.emi:trinkets:${project.trinkets_version}")
-    modImplementation("vazkii.patchouli:Patchouli:${project.patchouli_version}")
-    modImplementation("com.github.Noaaan:Matchbooks:${project.matchbooks_version}")
     modImplementation("com.github.emilyploszaj:step-height-entity-attribute:${project.step_height_attribute_version}")
     modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_entity_attributes_version}")
     modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
