--- a/gradle.properties
+++ b/gradle.properties
@@ -5,37 +5,38 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
-loader_version=0.15.11
+loader_version=0.16.4
 
 # Mod Properties
-mod_version=1.3.0
+mod_version=1.4.0
 maven_group = de.dafuqs
 archives_base_name = SpectralDecorations
 
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.92.0+1.20.1
-spectrum_version=j5G8Hldl
+fabric_version=0.92.2+1.20.1
+spectrum_version=1.8.1
 
 cloth_config_version=11.1.106
 modmenu_version=7.2.2
 rei_version=12.0.684
 emi_version=1.1.4+1.20.1
 architectury_version=9.1.12
-# https://maven.blamejared.com/vazkii/patchouli/Patchouli/
-patchouli_version=1.20.1-82-FABRIC-SNAPSHOT
+# https://cloudsmith.io/~klikli-dev/repos/mods/groups/
+modonomicon_version=1.75.0
 # https://maven.terraformersmc.com/releases/dev/emi/trinkets/
 trinkets_version=3.7.1
-revelationary_version=MlH70513
-fractal_version=rBFEjAiy
-mixin_extras_version=0.3.0
+revelationary_version=1.3.9+1.20.1
+fractal_version=1.2.0
 arrowhead_version=797635e3c7
 dimensional_reverb_version=26b0822932
-cca_version=5.2.1
-additional_entity_attributes_version=FULyznlV
-matchbooks_version=1.20-SNAPSHOT
+cca_version=5.2.2
+additional_entity_attributes_version=1.7.6+1.20.1
+matchbooks_version=0.1.0
 step_height_attribute_version=1.2.0
 reach_entity_attributes_version=2.4.0
+# https://modrinth.com/mod/exclusions-lib
+exclusionslib_version=0.6
 
 # What recipe viewer to use ('emi', 'rei', or 'disabled')
 recipe_viewer=emi
